# tfl-training-machine-learning-control

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENDA.md  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  _toc.yml  config.yml  entrypoint.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/actions/poetry/: action.yml
.github/workflows/: docker_build.yaml  docs_build.yaml  lint_and_test.yaml  main.yaml  test_and_render.yaml
_modules/: index.html  training_ml_control.html
_modules/training_ml_control/: control.html  hyperopt.html  nb_utils.html  plots.html  shortest_path_problem.html
_modules/training_ml_control/control/: environment.html  parameters.html
_modules/training_ml_control/environments/: cart.html  grid_world.html  inverted_pendulum.html  utils.html
_modules/training_ml_control/models/: dmd.html  models.html  sindy.html
_sources/apidocs/: index.rst
_sources/apidocs/training_ml_control/: training_ml_control.constants.md  training_ml_control.control.environment.md  training_ml_control.control.md  training_ml_control.control.parameters.md  training_ml_control.control.plots.md  training_ml_control.control.shortest_path_problem.md  training_ml_control.control.utils.md  training_ml_control.environments.cart.md  training_ml_control.environments.grid_world.md  training_ml_control.environments.inverted_pendulum.md  training_ml_control.environments.md  training_ml_control.environments.utils.md  training_ml_control.hyperopt.md  training_ml_control.md  training_ml_control.models.dmd.md  training_ml_control.models.md  training_ml_control.models.models.md  training_ml_control.models.sindy.md  training_ml_control.nb_utils.md  training_ml_control.plots.md  training_ml_control.shortest_path_problem.md
_sources/notebooks/: nb_10_Introduction.ipynb  nb_10_introduction.ipynb  nb_20_ControlAndPlanning.ipynb  nb_20_dynamic_programming.ipynb  nb_30_systems.ipynb  nb_40_LQR.ipynb  nb_80_safe_learning_control.ipynb  nb_90_practice.ipynb
apidocs/: index.html
apidocs/training_ml_control/: training_ml_control.constants.html  training_ml_control.control.environment.html  training_ml_control.control.html  training_ml_control.control.parameters.html  training_ml_control.control.plots.html  training_ml_control.control.shortest_path_problem.html  training_ml_control.control.utils.html  training_ml_control.environments.cart.html  training_ml_control.environments.grid_world.html  training_ml_control.environments.html  training_ml_control.environments.inverted_pendulum.html  training_ml_control.environments.utils.html  training_ml_control.html  training_ml_control.hyperopt.html  training_ml_control.models.dmd.html  training_ml_control.models.html  training_ml_control.models.models.html  training_ml_control.models.sindy.html  training_ml_control.nb_utils.html  training_ml_control.plots.html  training_ml_control.shortest_path_problem.html
build_scripts/: build_docs.sh  prepare_zip_package.sh  update_docs.py
docs/: conf.py  index.rst  intro.rst
notebooks/: bibliography.bib  home.html  home.md  nb_10_Introduction.html  nb_10_Introduction.ipynb  nb_10_PresentationTemplate.ipynb  nb_10_introduction.html  nb_10_introduction.ipynb  nb_20_ControlAndPlanning.html  nb_20_ControlAndPlanning.ipynb  nb_20_DynamicProgramming.ipynb  nb_20_IntroductionToControl.ipynb  nb_20_dynamic_programming.html  nb_20_dynamic_programming.ipynb  nb_30_LQR.ipynb  nb_30_systems.html  nb_30_systems.ipynb  nb_40_LQR.html  nb_40_LQR.ipynb  nb_40_MPC.ipynb  nb_40_RecentDevelopmentsInControl.html  nb_40_RecentDevelopmentsInControl.ipynb  nb_50_MCTS.ipynb  nb_50_MPC.html  nb_50_MPC.ipynb  nb_60_MCTS.html  nb_60_MCTS.ipynb  nb_60_RecentDevelopmentsInControl.ipynb  nb_70_SafeLearningControl.ipynb  nb_70_machine_learning_control.html  nb_70_machine_learning_control.ipynb  nb_80_safe_learning_control.html  nb_80_safe_learning_control.ipynb  nb_90_practice.html  nb_90_practice.ipynb
scripts/: download_data.py  upload_data.py
src/training_ml_control/: control.py  environment.py  hyperopt.py  inverted_pendulum.py  model.py  nb_utils.py  plots.py  shortest_path_problem.py
src/training_ml_control/control/: environment.py  plots.py  shortest_path_problem.py
src/training_ml_control/environments/: __init__.py  acrobot.py  cart.py  grid_world.py  inverted_pendulum.py  utils.py
src/training_ml_control/models/: __init__.py  dmd.py  models.py  sindy.py
tests/training_ml_control/: test_nb_utils.py
