[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tfl-training-ml-control"
version = "0.1.0"
description = "A transferlab training"
authors = [
    "Michael Panchenko <m.panchenko@appliedai.de>",
    "Ivan Rodriguez <i.rodriguez@appliedai.de>",
    "Anes Benmerzoug <a.benmerzoug@appliedai.de>",
]
license = "CC-BY-SA 4.0"
readme = "README.md"
homepage = "https://github.com/aai-institute/tfl-training-ml-control"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
exclude = ["test/*"]
packages = [
    {include = "training_ml_control", from = "src"}
]
include=["src/training_ml_control/assets"]

[tool.poetry.dependencies]
python = "~3.10"
ipywidgets = "^8.1.1"
jupyterlab = "^4.2.0"
jupyterlab-myst = "^2.4.2"
jupyterlab-lsp = "^5.1.0"
jupyterlab-scenes = "^2.0.0"
jupyterlab-deck = "^0.2.0"
matplotlib = "3.5.0"
seaborn = "^0.13.0"
numpy = "1.26"
pandas = {extras = ["performance"], version = "^2.2.0"}
gymnasium = {extras = ["classic-control"], version = "^0.29.0"}
do-mpc = "^4.6.1"
mediapy = "^1.2.0"
networkx = "^3.1"
pykoopman = "^1.1.0"
minigrid = "^2.3.1"
pysindy = "^1.7.5"
optuna = "^3.6.1"
jupyterlab-optuna = "^0.1.0"

[tool.poetry.group.docs.dependencies]
jupyter-book = "^1.0.0"
sphinx-autodoc2 = "^0.5.0"
sphinxcontrib-spelling = "^8.0.0"
sphinx-togglebutton = "^0.3.2"
sphinx-exercise = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "*"
pytest-cov = "*"

[tool.black]
# Source https://github.com/psf/black#configuration-format
include = "\\.pyi?$"
line-length = 88
target-version = ["py310"]

# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
line_length = "88"
profile = "black"
